# src/api/src/routes.ts
@@ -1,5 +1,6 @@
 import { Router, type Router as ExpressRouter } from 'express'
 import { authRoutes } from '@/modules/auth/auth.routes'
+import { foodTypesRoutes } from '@/modules/food-types/food-types.routes'
 import {
   uploadsApiRoutes,
   uploadsStaticRoutes,
@@ -12,3 +13,4 @@ routes.use('/api/auth', authRoutes)
 routes.use('/api/uploads', uploadsApiRoutes)
 routes.use('/uploads', uploadsStaticRoutes)
 routes.use('/api/zones', zonesRoutes)
+routes.use('/api/food-types', foodTypesRoutes)
